Solo falta la interfaz grafica

--- a/my-app/src/main/java/com/mycompany/app/Config/Databaseconf.properties
+++ b/my-app/src/main/java/com/mycompany/app/Config/Databaseconf.properties
@@ -1,17 +1,19 @@
-db.type=h2
-db.url=jdbc:h2:~/test
-db.username=sa
-db.password=
+#db.type=h2
+#db.url=jdbc:h2:tcp://h2_container:1521/~/testdb
+#db.username=sa
+#db.password=
+
 
 # Para MySQL
-# db.type=mysql
-# db.url=jdbc:mysql://localhost:3306/tu_db
-# db.username=root
-# db.password=1234
+db.type=mysql
+db.url=jdbc:mysql://localhost:3306/testdb
+db.username=user
+db.password=password
 
-# Para Oracle
-# db.type=oracle
-# db.url=jdbc:oracle:thin:@localhost:1521:xe
-# db.username=system
-# db.password=oracle
+
+#db.type=oracle
+#db.url=jdbc:oracle:thin:@oracle_container:1521/XEPDB1
+#db.username=system
+#db.password=password
+
 
