--- a/my-app/src/main/java/com/mycompany/app/Config/Databaseconf.properties
+++ b/my-app/src/main/java/com/mycompany/app/Config/Databaseconf.properties
@@ -1,18 +1,27 @@
-#db.type=h2
-#db.url=jdbc:h2:tcp://h2_container:1521/~/testdb
-#db.username=sa
-#db.password=
+########################################
+# Database configuration
+#
+# Set db.type to one of: h2, mysql, oracle
+# By default the project uses an in-memory H2 database for easy local testing.
+########################################
 
+# Default: H2 in-memory (no external DB required)
+db.type=h2
+db.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;MODE=MySQL
+db.username=sa
+db.password=
 
-# Para MySQL
-db.type=mysql
-db.url=jdbc:mysql://localhost:3306/testdb
-db.username=user
-db.password=password
+########################################
+# Example: MySQL (uncomment and update credentials to use MySQL)
+#db.type=mysql
+#db.url=jdbc:mysql://localhost:3306/testdb
+#db.username=user
+#db.password=password
 
-
+########################################
+# Example: Oracle (uncomment and update to use Oracle)
 #db.type=oracle
-#db.url=jdbc:oracle:thin:@oracle_container:1521/XEPDB1
+#db.url=jdbc:oracle:thin:@localhost:1521/XEPDB1
 #db.username=system
 #db.password=password
 
